--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,9 @@
 [settings]
-known_first_party=esi, home, images, navigation, search, settings, standardpages, urls, utils, wsgi
 default_section=FIRSTPARTY
+force_grid_wrap=0
+include_trailing_comma=True
+known_first_party=esi, home, images, navigation, search, settings, standardpages, urls, utils, wsgi
+line_length=88
+multi_line_output=3
+skip_glob = .direnv,node_modules,venv,**/migrations/**
+use_parentheses=True
