--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,9 @@ script:
   # Run python code style checks
   - flake8 ./opentech
 
+  # Check import sort order of Python files
+  - make sort
+
   # Collect static
   - python manage.py collectstatic --noinput --verbosity=0
 
